--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,11 @@
         "unordered_map": "cpp",
         "unordered_set": "cpp",
         "valarray": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "bitset": "cpp",
+        "queue": "cpp",
+        "random": "cpp",
+        "stack": "cpp",
+        "utility": "cpp"
     }
 }
